--- a/erbjudanden.html
+++ b/erbjudanden.html
@@ -14,7 +14,7 @@
         </div>
         <div class="knappar">
             <div>
-                <a href="./start.html"><button class="knapp">Start</button></a>
+                <a href="./index.html"><button class="knapp">Start</button></a>
                 <a href="./handla.html"><button class="knapp">Handla</button></a> 
                 <a href="./recept.html"><button class="knapp">Recept</button></a>
                 <a href="./erbjudanden.html"><button class="nuvarandeknapp">Erbjudanden</button></a>
