--- a/injerarecept.html
+++ b/injerarecept.html
@@ -14,7 +14,7 @@
         </div>
         <div class="knappar">
             <div>
-                <a href="./start.html"><button class="knapp">Start</button></a>
+                <a href="./index.html"><button class="knapp">Start</button></a>
                 <a href="./handla.html"><button class="knapp">Handla</button></a>
                 <a href="./recept.html"></a><button class="nuvarandeknapp">Recept</button> 
                 <a href="./erbjudanden.html"><button class="knapp">Erbjudanden</button></a>
