changed alt name on pictures and indented code in style.css

--- a/handla.html
+++ b/handla.html
@@ -29,67 +29,67 @@
    </div> 
    <div class="allabilder">
         <div class="bild">
-            <img class="gurkbilder" src="./gurka2" alt="Svensk gurka">    
+            <img class="gurkbilder" src="./gurka2" alt="En bild på en svensk gurka som kostar 20,95kr/st">    
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>    
         </div>
         <div class="bild">
-            <img class="gurkbilder" src="./gurka klass 1" alt="Gurka klass 1">       
+            <img class="gurkbilder" src="./gurka klass 1" alt="En bild på en gurka klass 1 som kostar 9,95kr/st">       
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>
         </div>
         <div class="bild">
-            <img class="gurkbilder" src="./djungelgurka.png" alt="Djungelgurka">       
+            <img class="gurkbilder" src="./djungelgurka.png" alt="En bild på en djungelgurka som kostar 56,32kr/st">       
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>
         </div>
         <div class="bild">
-            <img class="gurkbilder" src="./barudsgurka.png" alt="Barudsgurka">       
+            <img class="gurkbilder" src="./barudsgurka.png" alt="En bild på en barudgurka som kostar 2241kr/st">       
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>
         </div>
         <div class="bild">
-            <img class="gurkbilder" src="./snackgurka.png" alt="snackgurka">       
+            <img class="gurkbilder" src="./snackgurka.png" alt="En bild på en snackgurka som kostar 24,95kr /st">       
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>
         </div>
         <div class="bild">
-            <img class="gurkbilder" src="./vildgurka.png" alt="vildgurka">       
+            <img class="gurkbilder" src="./vildgurka.png" alt="En bild på en libanesisk vildgurka som kostar 63,95kr/st">       
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>
         </div>
         <div class="bild">
-            <img class="gurkbilder" src="./börjesson" alt="vildgurka">       
+            <img class="gurkbilder" src="./börjesson" alt="En bild på en börjesson som kostar 21,98kr/kg">       
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>
         </div>
         <div class="bild">
-            <img class="gurkbilder" src="./dolma" alt="vildgurka">       
+            <img class="gurkbilder" src="./dolma" alt="En bild på ozans dolma som kostar 5,23kr/kg">       
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>
         </div>
         <div class="bild">
-            <img class="gurkbilder" src="./rutten gurka" alt="vildgurka">       
+            <img class="gurkbilder" src="./rutten gurka" alt="En bild på en ruttengurka som kostar 8,88kr/st">       
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>
         </div>
         <div class="bild">
-            <img class="gurkbilder" src="./salzgurken" alt="vildgurka">       
+            <img class="gurkbilder" src="./salzgurken" alt="En bild på en salzgurken som kostar 56,89kr/st">       
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>
         </div>
         <div class="bild">
-            <img class="gurkbilder" src="./ok" alt="vildgurka">       
+            <img class="gurkbilder" src="./ok" alt="En bild på 鸭舌头 som kostar 72,37kr/st">       
             <button class="antal">0</button>   
             <button class="minusknapp">-</button>
             <button class="plusknapp">+</button>
