lagt till varukorg

--- a/Medlem.html
+++ b/Medlem.html
@@ -23,7 +23,7 @@
             <input class="searchbar" type="text" placeholder="Sök t.ex recept och varor">
         </div>
     </header>
-    <h1 class="kant">-</h1>
+    <h1 class="kant">svart kant</h1>
 
     <div class="medlem">
     <h1>Medlem</h1>
@@ -37,17 +37,13 @@
             <input class="personnummer" type="text" placeholder="Personnummer (ååmmddnnnn)">
             <div class="epost">
             </div>     
-        <button class="skapakonto">Nästa</button>
+                <button class="skapakonto">Nästa</button>
+            </div>
+            <button class="ingenpersonnummer">Jag saknar ett svenskt personnummer</button>
         </div>
-        <button class="ingenpersonnummer">Jag saknar ett svenskt personnummer</button>
     </div>
 
-  
-          
-        
-    </div>
-
-    <h1 class="kant">-</h1>
+    <h1 class="kant">svart kant</h1>
     <footer>
         <div class="huvudrubrik">
             <div class="omoss">
