--- a/injerarecept.html
+++ b/injerarecept.html
@@ -23,8 +23,7 @@
             <input class="searchbar" type="text" placeholder="Sök t.ex recept och varor">
         </div>
    </header> 
-
-   <h1 class="kant">-</h1>
+   <h1 class="kant">svart kant</h1>
    <div class="injerarecept">
     <div class="injerarecept-text">
        <div class="injerarecept-rubrik">
@@ -65,8 +64,7 @@
             <h3>Värm en plastbelagd stekpanna. Häll ca 1 dl smet i pannan och grädda på ena sidan tills det bildas små hål i injeran. Stjälp upp injeran och låt svalna på en handduk. Förvara injeran i plastpåsar om de inte äts direkt.</h3>
         </div>
     </div>
-
-<h1 class="kant">-</h1>
+    <h1 class="kant">svart kant</h1>
 <footer>
     <div class="huvudrubrik">
         <div class="omoss">
