--- a/recept.html
+++ b/recept.html
@@ -23,7 +23,7 @@
             <input class="searchbar" type="text" placeholder="Sök t.ex recept och varor">
         </div>
    </header> 
-<h1 class="kant">-</h1>
+<h1 class="kant">svart kant</h1>
 <h1 class="recept-rubrik">Recept</h1>
 <div class="allarecept">
         <div class="recept">
@@ -56,7 +56,7 @@
        
     </div>
 
-   <h1 class="kant">-</h1>
+   <h1 class="kant">svart kant</h1>
    <footer>
     <div class="huvudrubrik">
         <div class="omoss">
