--- a/erbjudanden.html
+++ b/erbjudanden.html
@@ -21,13 +21,17 @@
                 <a href="./Medlem.html"><button class="knapp">Medlem</button></a>            
             </div>
             <input class="searchbar" type="text" placeholder="Sök t.ex recept och varor">
-        </div>
+        </div>  
     </header>
     <h1 class="kant">-</h1>
 
+    <h1>hej</h1>
 <div class="rabattbild">
-    <img src="./rabatt" alt="">
+    <button><img src="./rabatt" alt=""></button>
 </div>
+
+
+<div class="scroller">Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic. Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</div>
     <h1 class="kant">-</h1>
     <footer>
         <div class="huvudrubrik">
