--- a/handla.html
+++ b/handla.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./style.css">
-    <script defer src="./app.js"></script>
+    <script defer src="./index.js"></script>
+    <script defer src="./apps.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,81 +24,214 @@
             </div>
             <input class="searchbar" type="text" placeholder="Sök t.ex recept och varor">
             <div class="pengarräknare">
-                <button class="varukorg"><img class="varukorgbild" src="./varukorg.png" alt="varukorg"></button>
-                <button class="räknare">0.00 kr</button>
+                <div class="shoppingcart">
+                    <button class="items">0</button>
+                    <button class="varukorg"><img class="varukorgbild" src="./varukorg.png" alt="varukorg"></button>
+                </div>
+                <button class="räknare">0 kr</button>
             </div>
         </div>
    </header> 
    <h1 class="kant">hej</h1>
+
+<div class="varor">
+    <h1>Varukorg</h1>
+    <h1 class="gkant">kant</h1>
+    <div class="varukorgvaror">
+        <div class="svenskgurka bilderpåprodukt">
+            <img class="varukorgsbild" src="./gurkaklass1.png" alt="En bild på en svensk gurka">
+            <div class="varukorgstext">
+                <h4>Svensk Gurka 300-500g</h4>
+                <h3>20.95:-</h3>
+            </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="gurkaklass1 bilderpåprodukt">
+            <img class="varukorgsbild" src="./riktigagurkaklass1.png" alt="En bild på en gurka klass1">
+            <div>
+                <h4>Gurka Klass 1 500g</h4>
+                <h3>9.95:-</h3>
+            </div>
+            <button class="mvarukorgsknapp">-</button>
+            <button class="avarukorgsknapp">0</button>
+            <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="djungelgurka bilderpåprodukt">
+            <img class="varukorgsbild" src="./djungelgurkav.png" alt="En bild på en djungelgurka">
+            <div>
+                <h4>Djungel Gurka 100g</h4>
+                <h3>56.32:-</h3>
+            </div>
+            <button class="mvarukorgsknapp">-</button>
+            <button class="avarukorgsknapp">0</button>
+            <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="barudsgurka bilderpåprodukt">
+            <img class="varukorgsbild" src="./barudsgurkav.png" alt="En bild på en barudsgurka">
+            <div>
+                <h4>Baruds Gurka 67kg</h4>
+                <h3>2241:-</h3>
+            </div>
+            <button class="mvarukorgsknapp">-</button>
+            <button class="avarukorgsknapp">0</button>
+            <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="snackgurka bilderpåprodukt">
+            <img class="varukorgsbild" src="./snackgurkav.png" alt="En bild på en snackgurka">
+            <div>
+                <h4>Snack Gurka 250g</h4>
+                <h3>24.95:-</h3>
+            </div>
+            <button class="mvarukorgsknapp">-</button>
+            <button class="avarukorgsknapp">0</button>
+            <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="libanesiskgurka bilderpåprodukt">
+            <img class="varukorgsbild" src="./vildgurkav.png" alt="En bild på en libanesisk vildgurka">
+            <div>
+                <h4>libanesisk Gurka 600g</h4>
+                <h3>63.95:-</h3>
+            </div>
+            <button class="mvarukorgsknapp">-</button>
+            <button class="avarukorgsknapp">0</button>
+            <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="börjesson bilderpåprodukt">
+            <img class="varukorgsbild" src="./Börjessonv.png" alt="En bild på en börjesson">
+            <div>
+                <h4>Börjesson 129kg</h4>
+                <h3>21.98/kg</h3>
+            </div>
+            <button class="mvarukorgsknapp">-</button>
+            <button class="avarukorgsknapp">0</button>
+            <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="ozansdolma bilderpåprodukt">
+            <img class="varukorgsbild" src="./ozansdolmav.png" alt="En bild på en ozans dolma">
+            <div>
+                <h4>Ozans Dolma 600g</h4>
+                <h3>5.23/kg</h3>
+            </div>
+            <button class="mvarukorgsknapp">-</button>
+            <button class="avarukorgsknapp">0</button>
+            <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="ruttengurka bilderpåprodukt">
+            <img class="varukorgsbild" src="./ruttengurkav.png" alt="En bild på en ruttengurka">
+            <div>
+                <h4>Rutten Gurka 400g</h4>
+                <h3>8.88:-</h3>
+            </div>
+            <button class="mvarukorgsknapp">-</button>
+            <button class="avarukorgsknapp">0</button>
+            <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="salzgurken bilderpåprodukt">
+            <img class="varukorgsbild" src="./Salzgurkenv.png" alt="En bild på en salzgurken">
+            <div>
+                <h4>Salzgurken 450g</h4>
+                <h3>56.89:-</h3>
+            </div>
+            <button class="mvarukorgsknapp">-</button>
+            <button class="avarukorgsknapp">0</button>
+            <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="鸭舌头 bilderpåprodukt">
+            <img class="varukorgsbild" src="./yst.png" alt="En bild på en 鸭舌头">
+            <div>
+                <h4>鸭舌头 800g</h4>
+                <h3>72.37:-</h3>
+            </div>
+            <button class="mvarukorgsknapp">-</button>
+            <button class="avarukorgsknapp">0</button>
+            <button class="pvarukorgsknapp">+</button>
+        </div>
+        <div class="emptyshoppingcart">
+            <h1 class="noitems">Det finns inga varor i varukorgen</h1>
+            <img class="martinbild" src="./barudsgurkav.png" alt="bild på barudsgurka">
+        </div>
+
+    </div>
+    <h1 class="gkant2">kant</h1>
+    <button class="tabortallavaror">Ta bort alla varor</button>
+    <h1 class="gkant3">kant</h1>
+    <button class="varukorgbutton">Till Kassan</button>
+</div>
+   
+
+
+   
    <div class="erbjudande">
        <h1>Rekommenderat för dig</h1>
    </div> 
    <div class="allabilder">
         <div class="bild">
             <img class="gurkbilder" src="./gurka2" alt="En bild på en svensk gurka som kostar 20,95kr/st">    
-            <button class="antal aknapp1">0</button>   
-            <button class="minusknapp mknapp1" class="minus1">-</button>
-            <button class="plusknapp pknapp1" class="plus1">+</button>    
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons" class="minus1">-</button>
+            <button class="plusknapp pbuttons" class="plus1">+</button>    
         </div>
         <div class="bild">
             <img class="gurkbilder" src="./gurka klass 1" alt="En bild på en gurka klass 1 som kostar 9,95kr/st">       
-            <button class="antal aknapp2">0</button>   
-            <button class="minusknapp mknapp2">-</button>
-            <button class="plusknapp pknapp2">+</button>
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons">-</button>
+            <button class="plusknapp pbuttons">+</button>
         </div>
         <div class="bild">
             <img class="gurkbilder" src="./djungelgurka.png" alt="En bild på en djungelgurka som kostar 56,32kr/st">       
-            <button class="antal aknapp3">0</button>   
-            <button class="minusknapp mknapp3">-</button>
-            <button class="plusknapp pknapp3">+</button>
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons">-</button>
+            <button class="plusknapp pbuttons">+</button>
         </div>
         <div class="bild">
             <img class="gurkbilder" src="./barudsgurka.png" alt="En bild på en barudgurka som kostar 2241kr/st">       
-            <button class="antal aknapp4">0</button>   
-            <button class="minusknapp mknapp4">-</button>
-            <button class="plusknapp pknapp4">+</button>
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons">-</button>
+            <button class="plusknapp pbuttons">+</button>
         </div>
         <div class="bild">
             <img class="gurkbilder" src="./snackgurka.png" alt="En bild på en snackgurka som kostar 24,95kr /st">       
-            <button class="antal aknapp5">0</button>   
-            <button class="minusknapp mknapp5">-</button>
-            <button class="plusknapp pknapp5">+</button>
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons">-</button>
+            <button class="plusknapp pbuttons">+</button>
         </div>
         <div class="bild">
             <img class="gurkbilder" src="./vildgurka.png" alt="En bild på en libanesisk vildgurka som kostar 63,95kr/st">       
-            <button class="antal aknapp6">0</button>   
-            <button class="minusknapp mknapp6">-</button>
-            <button class="plusknapp pknapp6">+</button>
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons">-</button>
+            <button class="plusknapp pbuttons">+</button>
         </div>
         <div class="bild">
             <img class="gurkbilder" src="./börjesson" alt="En bild på en börjesson som kostar 21,98kr/kg">       
-            <button class="antal aknapp7">0</button>   
-            <button class="minusknapp mknapp7">-</button>
-            <button class="plusknapp pknapp7">+</button>
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons">-</button>
+            <button class="plusknapp pbuttons">+</button>
         </div>
         <div class="bild">
             <img class="gurkbilder" src="./dolma" alt="En bild på ozans dolma som kostar 5,23kr/kg">       
-            <button class="antal aknapp8">0</button>   
-            <button class="minusknapp mknapp8">-</button>
-            <button class="plusknapp pknapp8">+</button>
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons">-</button>
+            <button class="plusknapp pbuttons">+</button>
         </div>
         <div class="bild">
             <img class="gurkbilder" src="./rutten gurka" alt="En bild på en ruttengurka som kostar 8,88kr/st">       
-            <button class="antal aknapp9">0</button>   
-            <button class="minusknapp mknapp9">-</button>
-            <button class="plusknapp pknapp9">+</button>
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons">-</button>
+            <button class="plusknapp pbuttons">+</button>
         </div>
         <div class="bild">
             <img class="gurkbilder" src="./salzgurken" alt="En bild på en salzgurken som kostar 56,89kr/st">       
-            <button class="antal aknapp10">0</button>   
-            <button class="minusknapp mknapp10">-</button>
-            <button class="plusknapp pknapp10">+</button>
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons">-</button>
+            <button class="plusknapp pbuttons">+</button>
         </div>
         <div class="bild">
             <img class="gurkbilder" src="./ok" alt="En bild på 鸭舌头 som kostar 72,37kr/st">       
-            <button class="antal aknapp11">0</button>   
-            <button class="minusknapp mknapp11">-</button>
-            <button class="plusknapp pknapp11">+</button>
+            <button class="antal abuttons">0</button>   
+            <button class="minusknapp mbuttons">-</button>
+            <button class="plusknapp pbuttons">+</button>
         </div>
      </div>
      <h1 class="kant">-</h1>
