--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./style.css">
+    <script defer src="./index.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,9 +22,147 @@
                 <a href="./Medlem.html"><button class="knapp">Medlem</button></a>          
             </div>
             <input class="searchbar" type="text" placeholder="Sök t.ex recept och varor">
+            <div class="pengarräknare">
+                <div class="shoppingcart">
+                    <button class="items">0</button>
+                    <button class="varukorg"><img class="varukorgbild" src="./varukorg.png" alt="varukorg"></button>
+                </div>
+                <button class="räknare">0 kr</button>
+            </div>
         </div>
     </header>
     <h1 class="kant">-</h1>
+    
+    <div class="varor">
+        <h1>Varukorg</h1>
+        <h1 class="gkant">kant</h1>
+        <div class="varukorgvaror">
+            <div class="svenskgurka bilderpåprodukt">
+                <img class="varukorgsbild" src="./gurkaklass1.png" alt="En bild på en svensk gurka">
+                <div class="varukorgstext">
+                    <h4>Svensk Gurka 300-500g</h4>
+                    <h3>20.95:-</h3>
+                </div>
+                    <button class="mvarukorgsknapp">-</button>
+                    <button class="avarukorgsknapp">0</button>
+                    <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="gurkaklass1 bilderpåprodukt">
+                <img class="varukorgsbild" src="./riktigagurkaklass1.png" alt="En bild på en gurka klass1">
+                <div>
+                    <h4>Gurka Klass 1 500g</h4>
+                    <h3>9.95:-</h3>
+                </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="djungelgurka bilderpåprodukt">
+                <img class="varukorgsbild" src="./djungelgurkav.png" alt="En bild på en djungelgurka">
+                <div>
+                    <h4>Djungel Gurka 100g</h4>
+                    <h3>56.32:-</h3>
+                </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="barudsgurka bilderpåprodukt">
+                <img class="varukorgsbild" src="./barudsgurkav.png" alt="En bild på en barudsgurka">
+                <div>
+                    <h4>Baruds Gurka 67kg</h4>
+                    <h3>2241:-</h3>
+                </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="snackgurka bilderpåprodukt">
+                <img class="varukorgsbild" src="./snackgurkav.png" alt="En bild på en snackgurka">
+                <div>
+                    <h4>Snack Gurka 250g</h4>
+                    <h3>24.95:-</h3>
+                </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="libanesiskgurka bilderpåprodukt">
+                <img class="varukorgsbild" src="./vildgurkav.png" alt="En bild på en libanesisk vildgurka">
+                <div>
+                    <h4>libanesisk Gurka 600g</h4>
+                    <h3>63.95:-</h3>
+                </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="börjesson bilderpåprodukt">
+                <img class="varukorgsbild" src="./Börjessonv.png" alt="En bild på en börjesson">
+                <div>
+                    <h4>Börjesson 129kg</h4>
+                    <h3>21.98/kg</h3>
+                </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="ozansdolma bilderpåprodukt">
+                <img class="varukorgsbild" src="./ozansdolmav.png" alt="En bild på en ozans dolma">
+                <div>
+                    <h4>Ozans Dolma 600g</h4>
+                    <h3>5.23/kg</h3>
+                </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="ruttengurka bilderpåprodukt">
+                <img class="varukorgsbild" src="./ruttengurkav.png" alt="En bild på en ruttengurka">
+                <div>
+                    <h4>Rutten Gurka 400g</h4>
+                    <h3>8.88:-</h3>
+                </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="salzgurken bilderpåprodukt">
+                <img class="varukorgsbild" src="./Salzgurkenv.png" alt="En bild på en salzgurken">
+                <div>
+                    <h4>Salzgurken 450g</h4>
+                    <h3>56.89:-</h3>
+                </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="鸭舌头 bilderpåprodukt">
+                <img class="varukorgsbild" src="./yst.png" alt="En bild på en 鸭舌头">
+                <div>
+                    <h4>鸭舌头 800g</h4>
+                    <h3>72.37:-</h3>
+                </div>
+                <button class="mvarukorgsknapp">-</button>
+                <button class="avarukorgsknapp">0</button>
+                <button class="pvarukorgsknapp">+</button>
+            </div>
+            <div class="emptyshoppingcart">
+                <h1 class="noitems">Det finns inga varor i varukorgen</h1>
+                <img class="martinbild" src="./barudsgurkav.png" alt="bild på barudsgurka">
+            </div>
+    
+        </div>
+        <h1 class="gkant2">kant</h1>
+        <button class="tabortallavaror">Ta bort alla varor</button>
+        <h1 class="gkant3">kant</h1>
+        <button class="varukorgbutton">Till Kassan</button>
+    </div>
+
+
+
+
+
 
     <div class="start">
         <img src="./injera" alt="En bild och länk till recept för injera">
