--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="rubrik">MARTINS GURKBUTIK</h1>
         </div>
         <div class="knappar">
-            <div>
+            <div class="sidoknappar">
                 <a href="./start.html"><button class="nuvarandeknapp">Start</button></a>
                 <a href="./handla.html"><button class="knapp">Handla</button></a> 
                 <a href="./recept.html"><button class="knapp">Recept</button></a>
