--- a/dolma-recept.html
+++ b/dolma-recept.html
@@ -13,7 +13,7 @@
             <h1 class="rubrik">MARTINS GURKBUTIK</h1>
         </div>
         <div class="knappar">
-            <div>
+            <div class="sidoknappar">
                 <a href="./index.html"><button class="knapp">Start</button></a>
                 <a href="./handla.html"><button class="knapp">Handla</button></a>
                 <a href="./recept.html"></a><button class="nuvarandeknapp">Recept</button> 
